<resources>
    <string name="app_name">PingAgain</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="host_is">Host:</string>
    <string name="host_address_is">Domain Address: %s</string>
    <string name="ip_address_is">IP Address: %s</string>
    <string name="status_of_ping">Ping Status: %s</string>
    <string name="average_ping_value_std_is">Average Ping Value: %1$s +/- %2$s ms</string>
    <string name="min_max_values_are">Min/Max Ping Values: %1$s/%2$s ms</string>
    <string name="packets_sent_is">Packets Sent: %d</string>
    <string name="packet_loss_is">Packets Lost: %d </string>
    <string name="ping_status_is">STATUS:</string>
    <string name="ping_value_is">Ping Value:</string>
    <string name="ping_all_hosts_short">SHORT PING (ALL)</string>
    <string name="add">ADD</string>
    <string name="enter_host_address">Enter Domain Name / IP Address</string>
    <string name="ping_host_long">LONG PING</string>
    <string name="ping_host_short">SHORT PING</string>
    <string name="no_internet">No Internet</string>
    <string name="ping_count_5">5</string>
    <string name="ping_count_10">10</string>
    <string name="ping_count_15">15</string>
    <string name="ping_count_50">50 (approx. 10s)</string>
    <string name="ping_count_50_value">50</string>
    <string name="ping_count_100">100 (approx. 20s)</string>
    <string name="ping_count_100_value">100</string>
    <string name="ping_count_150">150 (approx. 30s)</string>
    <string name="ping_count_150_value">150</string>g
    <string name="no_hosts">There are no hosts. Add a host for it to appear.</string>
    <string name="short_pings_key">short_pings</string>
    <string name="long_pings_key">long_pings</string>
    <string name="ip_placeholder">Make a ping to see</string>
    <string name="delete_host_title">Delete Host</string>
    <string name="delete_host_message">Are you sure you want to delete this host?</string>
    <string name="yes">YES</string>
    <string name="yes_dont_show_again">YES, Don\'t show this window again</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_prefs_title">Warning</string>
    <string name="warning_prefs_title">Show Warning Messages</string>
    <string name="warning_dialog_key">warning_dialog</string>
    <string name="warning_summary">Should the app show warning messages (e.g. before deleting a host)</string>

</resources>